Implement getRange test scenario